JSR 292 assert(caller_nm->is_method_handle_return(caller_frame.pc())) failed: must be MH call site

XMLWordPrintable

    • b02
    • generic
    • generic
    • Verified

        http://sqeweb.sfbay.sun.com/nfs/results/vm/gtee/JDK7/NIGHTLY/VM/2010-08-11/Comp_Baseline/javase/solaris-i586/client/comp/solaris-i586_javase_client_comp_JT_JDK_java_dyn/workDir/java/dyn/MethodHandlesTest/hs_err_pid9097.log

        # Internal Error (/tmp/jprt/P1/B/175109.kvn/source/src/share/vm/runtime/sharedRuntime.cpp:1057), pid=9097, tid=12
        # assert(caller_nm->is_method_handle_return(caller_frame.pc())) failed: must be MH call site
        #
        # JRE version: 7.0
        # Java VM: OpenJDK Client VM (19.0-b04-201008111751.kvn.6973329-fastdebug compiled mode, sharing solaris-x86 )

        V [libjvm.so+0x7c1d39];; __1cPreport_vm_error6Fpkci11_v_+0x5ad
        V [libjvm.so+0x13ee061];; __1cNSharedRuntimeSresolve_sub_helper6FpnKJavaThread_bbpnGThread__nMmethodHandle__+0x1a25
        V [libjvm.so+0x13ec1ee];; __1cNSharedRuntimeOresolve_helper6FpnKJavaThread_bbpnGThread__nMmethodHandle__+0x3a
        V [libjvm.so+0x13f00a8];; __1cNSharedRuntimeWresolve_virtual_call_C6FpnKJavaThread__pC_+0x110
        v ~RuntimeStub::resolve_virtual_call
        J java.dyn.MethodHandle.invokeVarargs([Ljava/lang/Object;)Ljava/lang/Object;
        V [libjvm.so+0xa666fa];; __1cJJavaCallsLcall_helper6FpnJJavaValue_pnMmethodHandle_pnRJavaCallArguments_pnGThread__v_+0x78a
        V [libjvm.so+0x12a8837];; __1cCosUos_exception_wrapper6FpFpnJJavaValue_pnMmethodHandle_pnRJavaCallArguments_pnGThread__v2468_v_+0x17
        V [libjvm.so+0xa65f3c];; __1cJJavaCallsEcall6FpnJJavaValue_nMmethodHandle_pnRJavaCallArguments_pnGThread__v_+0x44

              Assignee:
              Christian Thalinger (Inactive)
              Reporter:
              Christian Thalinger (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

                Created:
                Updated:
                Resolved:
                Imported:
                Indexed: